--- a/travis.yml
+++ b/travis.yml
@@ -1,4 +1,9 @@
 language:bash
 script:
   - echo "test start"
-  - ./test.sh
+  - ./kaddai3-test1.sh
+  - ./kaddai3-test2.sh
+  - ./kaddai3-test3.sh
+  - ./kaddda3-test4.sh
+  - echo "test end"
+
