--- a/travis.yml
+++ b/travis.yml
@@ -1,7 +1,4 @@
 language: bash
 script:
   - echo "test start"
-  - bash ./kaddai3-test1.sh
-  - bash ./kaddai3-test2.sh
-  - bash ./kaddai3-test3.sh
-  - bash ./kaddda3-test4.sh
+  - ./kaddai3-test1.sh
